--- a/MoviePro.csproj
+++ b/MoviePro.csproj
@@ -17,4 +17,8 @@
 	<PackageReference Include="Npgsql.EntityFrameworkCore.PostgreSQL" Version="6.0.5" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="wwwroot\images\" />
+  </ItemGroup>
+
 </Project>
