--- a/MoviePro.csproj
+++ b/MoviePro.csproj
@@ -1,8 +1,7 @@
-<Project Sdk="Microsoft.NET.Sdk.Web">
+﻿<Project Sdk="Microsoft.NET.Sdk.Web">
 
   <PropertyGroup>
 	<TargetFramework>net6.0</TargetFramework>
-	<Nullable>enable</Nullable>
 	<ImplicitUsings>enable</ImplicitUsings>
 	<UserSecretsId>aspnet-MoviePro-F870B28D-FBCF-40B7-B3C5-606AA9ACAB6C</UserSecretsId>
 	<InvariantGlobalization>true</InvariantGlobalization>
@@ -18,7 +17,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <Folder Include="wwwroot\images\" />
+	<Folder Include="wwwroot\images\" />
   </ItemGroup>
 
 </Project>
