--- a/appsettings.json
+++ b/appsettings.json
@@ -11,7 +11,7 @@
   "AllowedHosts": "*",
   "AppSettings": {
     "MovieProSettings": {
-      "TmDBApiKey": "<put your api key here>",
+      "TmDBApiKey": "274b61ada96d9e843e646757b9269312",
       "DefaultBackdropSize": "original",
       "DefaultPosterSize": "w500",
       "DefaultYoutubeKey": "Bq2fl8iD67Y",
@@ -23,8 +23,8 @@
       "DefaultCredentials": {
         "Role": "Administrator",
         "Email": "Admin@admin.com",
-        "Password": "<put your password here>" 
-      } 
+        "Password": "Abc@123!"
+      }
     },
     "TmDBSettings": {
       "BaseUrl": "https://api.themoviedb.org/3",
